--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,7 @@
   margin-right: 20px;
   margin-left: 20px;
   margin-bottom: 10px;
+  margin-top: 80px;
 }
 .uploadbutton {
   text-align: right;
